# affine-equivalence

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  adjoint.c  adjoint.h  affine.c  affine.h  compile.sh  main.c  orthoderivative.c  orthoderivative.h  result_q_6_2.txt  script.py  structures.c  structures.h  testing.py
resources/: g.tt  q_6_3.tt
resources/dim6/: q_6_1.tt  q_6_10.tt  q_6_11.tt  q_6_12.tt  q_6_13.tt  q_6_14.tt  q_6_2.tt  q_6_4.tt  q_6_5.tt  q_6_6.tt  q_6_7.tt  q_6_8.tt  q_6_9.tt
resources/dim6/gf/: orthoderivative_GF.tt  orthoderivative_g.tt  q_6_1.tt
results/dim6/: q_6_1.txt  q_6_10.txt  q_6_11.txt  q_6_12.txt  q_6_13.txt  q_6_14.txt  q_6_2.txt  q_6_3.txt  q_6_4.txt  q_6_5.txt  q_6_6.txt  q_6_7.txt  q_6_8.txt  q_6_9.txt
results/dim8/classic/: classic_1.txt  classic_10.txt  classic_11.txt  classic_12.txt  classic_13.txt  classic_14.txt  classic_15.txt  classic_16.txt  classic_17.txt  classic_18.txt  classic_19.txt  classic_2.txt  classic_20.txt  classic_21.txt  classic_22.txt  classic_3.txt  classic_4.txt  classic_5.txt  classic_6.txt  classic_7.txt  classic_8.txt  classic_9.txt
src/: adjoint.c  adjoint.h  affine.c  affine.h  ea_orthoderivative.c  equivalence.c  equivalence.h  hybrid.c  linear.c  main.c  orthoderivative.c  orthoderivative.h  structures.c  structures.h
